force-app/main/default/objects/Account/fields/Brass_Instruments__c.field-meta.xml
<CustomField>
    <fullName>Brass_Instruments__c</fullName>
    <label>Brass Instruments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saxaphone</fullName>
            </value>
            <value>
                <fullName>Trumpet</fullName>
            </value>
            <value>
                <fullName>French horn</fullName>
            </value>
            <value>
                <fullName>Trumbone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>