force-app/main/default/objects/Account/fields/Instrument_Type__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Type__c</fullName>
    <label>Instrument Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brass</fullName>
            </value>
            <value>
                <fullName>Woodwind</fullName>
            </value>
            <value>
                <fullName>Percussion</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>