force-app/main/default/objects/Account/fields/String_Instrument__c.field-meta.xml
<CustomField>
    <fullName>String_Instrument__c</fullName>
    <label>String Instrument</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guitar</fullName>
            </value>
            <value>
                <fullName>Violin</fullName>
            </value>
            <value>
                <fullName>Banjo</fullName>
            </value>
            <value>
                <fullName>Harp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>