force-app/main/default/objects/Account/fields/Woodwind_Instruments__c.field-meta.xml
<CustomField>
    <fullName>Woodwind_Instruments__c</fullName>
    <label>Woodwind Instruments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flute</fullName>
            </value>
            <value>
                <fullName>Clarinet</fullName>
            </value>
            <value>
                <fullName>Recorder</fullName>
            </value>
            <value>
                <fullName>Didgeridoo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>